# blockdsp

./: .gitignore  AudioDSPKernel.hpp  AudioFile.cpp  AudioFile.hpp  AudioFile_Private.hpp  AudioManager.cpp  AudioManager.hpp  AudioManager_Private.hpp  AudioProcessingUnit.cpp  AudioProcessingUnit.hpp  BDCompiler.cpp  BDCompiler.hpp  BDLogger_Private.hpp  BlockDSPNode.cpp  BlockDSPNode.hpp  BlockDSPNode_Private.hpp  BlockDSPNumber.cpp  BlockDSPNumber.hpp  BlockDSPSystem.cpp  BlockDSPSystem.hpp  BlockDSPSystem_Private.hpp  CMakeLists.txt  DelayBuffer.cpp  DelayBuffer.h  Makefile  README.md  audio_constants.h  bdsp_logger_private.hpp  blockdsp.h  dsphelpers.hpp  libblockdsp.h
Audio Manager/: AudioDSPKernel.cpp  AudioDSPKernel.hpp  AudioFile.cpp  AudioFile.hpp  AudioFile_Private.hpp  AudioManager.cpp  AudioManager.hpp  AudioManager_Private.hpp  AudioProcessingUnit.hpp  autil_audioprocessingunit.cpp  autil_audioprocessingunit.hpp  autil_audioprocessingunit_private.hpp  autil_dspkernel.cpp  autil_dspkernel.hpp  autil_file.cpp  autil_file.hpp  autil_file_private.hpp  autil_manager.cpp  autil_manager.hpp  autil_manager_private.hpp  autil_number.cpp  autil_number.hpp  autil_number_private.hpp  autil_parameter.cpp  autil_parameter.hpp  autil_parameter_private.hpp  autil_parametermap.cpp  autil_parametermap.hpp  autil_parametermap_private.hpp  autil_stringlist.cpp  autil_stringlist.hpp  autil_stringlist_private.hpp  autil_thread_manager.cpp  autil_thread_manager.hpp  autil_uiattrs.h
BlockDSP/: BlockDSPAPU.cpp  BlockDSPAPU.hpp  BlockDSPNode.cpp  BlockDSPNode.hpp  BlockDSPNumber.cpp  BlockDSPNumber.hpp  BlockDSPNumber_Private.hpp  BlockDSPParameter.cpp  BlockDSPParameter.hpp  BlockDSPParameter_Private.hpp  BlockDSPSystem.cpp  BlockDSPSystem.hpp  bdsp_apu.cpp  bdsp_apu.hpp  bdsp_node.cpp  bdsp_node.hpp  bdsp_node_apu.cpp  bdsp_node_apu.hpp  bdsp_node_private.hpp  bdsp_number.cpp  bdsp_number.hpp  bdsp_number_private.hpp  bdsp_parameter.cpp  bdsp_parameter.hpp  bdsp_parameter_private.hpp  bdsp_system.cpp  bdsp_system.hpp  bdsp_system_private.hpp  dsputil_delaybuffer.cpp
BuiltIns/: bdsp_builtin_delay.cpp  bdsp_builtin_delay.hpp  bdsp_builtin_gain.cpp  bdsp_builtin_gain.hpp
Code Generation/: BDAPULoader.cpp  BDAPULoader.hpp  BDAPULoader_Private.hpp  BDCodeBuilder.cpp  BDCodeBuilder.hpp  BDCodeBuilder_Private.hpp  BDCompiler.cpp  BDCompiler.hpp  BDCompiler_Private.hpp  bdsp_apuloader.cpp  bdsp_apuloader.hpp  bdsp_apuloader_private.hpp  bdsp_codebuilder.cpp  bdsp_codebuilder.hpp  bdsp_codebuilder_private.hpp  bdsp_compiler.cpp  bdsp_compiler.hpp  bdsp_compiler_private.hpp
Logger/: BDLogger.cpp  BDLogger.hpp  bdsp_logger.cpp  bdsp_logger.hpp  bdsp_logger_private.hpp
Resources/examples/: echo_effect_apu.cpp
docs/: Doxyfile
dsptest/: CMakeLists.txt  SimpleDelayEffect.cpp  SimpleDelayEffect.hpp  main.cpp
libblockdsp.xcodeproj/: project.pbxproj
libblockdsp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libblockdsp.xcodeproj/xcuserdata/Luke.xcuserdatad/xcschemes/: libblockdsp.xcscheme  xcschememanagement.plist
resources/examples/: gain_bdsp_effect.cpp
scripts/: build.sh  docs.sh  sloc.sh
test/: README.md  setup_test_env.sh
test/gunit/: CMakeLists.txt  Makefile  test_apu_api.cpp  test_apu_node.cpp  test_apu_parameter.cpp  test_apu_parametermap.cpp  test_apu_stringlist.cpp  test_apunumber.cpp  test_audiofile.cpp  test_audiomanager_api.cpp  test_bdsp_parameter.cpp  test_bdsp_system.cpp  test_code_builder.cpp  test_dsp_blocks.cpp  test_parameter.cpp  test_thread_manager.cpp
